[project]
name = 'raysect'
version = '0.9.0'
#url='http://www.raysect.org'
#author='Dr Alex Meakins et al.'
#author_email='developers@raysect.org'
#description='A Ray-tracing Framework for Science and Engineering'
#license='BSD-3-Clause'
#license-files = ["LICENSE.txt"]
#classifiers=[
#    'Development Status :: 5 - Production/Stable',
#    'Intended Audience :: Science/Research',
#    'Intended Audience :: Education',
#    'Intended Audience :: Developers',
#    'Natural Language :: English',
#    'Operating System :: POSIX :: Linux',
#    'Programming Language :: Cython',
#    'Programming Language :: Python :: 3',
#    'Topic :: Multimedia :: Graphics :: 3D Rendering',
#    'Topic :: Scientific/Engineering :: Physics'
#]

[build-system]
requires = ['meson-python', 'wheel', 'oldest-supported-numpy', 'cython<3.0']
build-backend = 'mesonpy'
