[project]
name = "raysect"
requires-python = ">=3.9"
authors = [{name = "Dr Alex Meakins et al.", email = "developers@raysect.org"}]
description = "A Ray-tracing Framework for Science and Engineering"
readme = {file = "README.md", content-type = "text/markdown"}
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = ["numpy>=2", "matplotlib"]
dynamic = ["version"]

[project.urls]
Homepage = "https://www.raysect.org"
Repository = "https://github.com/raysect/source"
Issues = "https://github.com/raysect/source/issues"
Changelog = "https://github.com/raysect/source/blob/master/CHANGELOG.txt"

[build-system]
requires = ["meson-python", "setuptools", "setuptools-scm", "wheel", "numpy>=2", "cython>=3.1"]
build-backend = "mesonpy"

[tool.setuptools_scm]
version_file = "raysect/_version.py"